--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template-ts-vite",
-  "version": "1.1.0",
-  "description": "Excalibur TypeScript template for Vite",
+  "name": "lights-out",
+  "version": "1.0.0",
+  "description": "Trying out ExcaliburJS",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
@@ -20,7 +20,7 @@
     "vite",
     "game-engine"
   ],
-  "author": "Erik Onarheim",
+  "author": "Sam Miller",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/excaliburjs/template-ts-vite/issues"
