--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "start": "vite",
     "build": "tsc && vite build",
-    "vite-build": "vite build",
+    "deploy": "vite build && gh-pages -d dist",
     "serve": "vite preview",
     "test": "npm run build && ex-test -d ./dist -t ./test/test.js"
   },
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/excaliburjs/template-ts-vite#readme",
   "devDependencies": {
     "excalibur": "0.29.3",
+    "gh-pages": "^6.2.0",
     "typescript": "5.6.3",
     "vite": "5.4.10"
   },
